# netsquid-p4

./: .gitignore  .gitlab-ci.yml  .pylintrc  CHANGELOG.md  LICENSE  Makefile  README.md  dev-requirements.txt  example_requirements.txt  pyproject.toml  requirements.txt  setup.cfg  setup.py
docs/source/: components.rst  conf.py  index.rst  modules.rst
docs/source/modules/: device.rst  node.rst
docs/source/modules/components/: v1model.rst
examples/: README.md  connections.py  run_examples.py
examples/forwarding/: README.md  netconf.yml  run.py
examples/forwarding/p4/: forwarding.json  forwarding.p4
examples/ping_pong/: README.md  netconf.yml  run.py
examples/ping_pong/p4/: ping-pong.json  ping-pong.p4
netsquid_p4/: device.py  node.py
netsquid_p4/components/: v1model.py
tests/: conftest.py  test_v1model.py  util.py
tests/p4/: v1model.json  v1model.p4
